Fix dark mode graphs on white background

--- a/styles/BookSeriesDO.less
+++ b/styles/BookSeriesDO.less
@@ -570,7 +570,8 @@
 	#app .adoe_container[data-type="BookSeries"] {
 
 		.pubgraphPopup {
-			color: #333;
+			// color: #333;
+			background: #222;
 		}
 
 		.dataObjectItem.futureSeparator {
